--- a/Initialcamel/build.gradle
+++ b/Initialcamel/build.gradle
@@ -4,22 +4,47 @@ buildscript {
 	}
 	repositories {
 		mavenCentral()
+		jcenter()
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+		 classpath(group: 'com.jayway.restassured', name: 'spring-mock-mvc', version: '2.4.1')
+		  classpath(group: 'com.jayway.restassured', name: 'rest-assured', version: '1.3')
+		 classpath("no.nils:wsdl2java:0.10")
+		 classpath('com.github.jacobono:gradle-jaxb-plugin:1.3.6')
+		 
 	}
+	
 }
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply plugin: "no.nils.wsdl2java"
+apply plugin: 'com.github.jacobono.jaxb'
 
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.7
+sourceCompatibility = 1.8
 
 repositories {
 	mavenCentral()
 }
+wsdl2javaExt {
+    deleteGeneratedSourcesOnClean = false
+}
+
+wsdl2java{
+    wsdlsToGenerate = [
+            "src/main/resources/wsdl/employee.wsdl"
+    ]
+    generatedWsdlDir = file("$projectDir/generatedsources")
+   // wsdlDir = file("$projectDir/src/main/resources/wsdl")
+    locale = Locale.FRANCE
+}
+wsdl2javaExt {
+    cxfVersion = "2.5.1"
+}
+
 
 
 dependencies {
@@ -27,7 +52,22 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-web-services')
-	runtime('org.springframework.boot:spring-boot-devtools')
+	compile('org.apache.camel:camel-cxf:2.18.1')
+	compile('org.apache.camel:camel-amqp:2.15.1')
+	
+	compile('org.apache.camel:camel-rabbitmq:2.18.2')
+	compile('org.apache.camel:camel-jms:2.12.1')
+	compile('commons-lang:commons-lang:2.6')	
+	runtime('org.springframework.boot:spring-boot-devtools')	
 	runtime('com.h2database:h2')
+     testCompile("io.rest-assured:rest-assured:3.0.2")
+     compile ("io.rest-assured:json-path:3.0.2")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile ("com.jayway.restassured:spring-mock-mvc:2.4.1")
+	 testCompile("org.powermock:powermock-core:1.6.5")
+    testCompile("org.powermock:powermock-api-mockito:1.6.5")
+    testCompile("org.powermock:powermock-module-junit4:1.6.5")
+    testCompile("org.hamcrest:java-hamcrest:2.0.0.0")
+    testCompile("com.github.dreamhead:moco-core:0.11.0")
+    
 }
